refactor: store latest immich version available on the server
