# server/src/domain/system-config/dto/system-config-version.dto.ts
@@ -1,0 +1,10 @@
+import { IsNumber } from 'class-validator';
+
+export class SystemConfigImmichVersion {
+  @IsNumber()
+  major!: number;
+  @IsNumber()
+  minor!: number;
+  @IsNumber()
+  patch!: number;
+}
