# server/src/domain/user/response-dto/user-available-version.dto.ts
@@ -1,0 +1,10 @@
+import { SystemConfigImmichVersion } from '@app/domain/system-config/dto/system-config-version.dto';
+import { IsBoolean, IsOptional } from 'class-validator';
+
+export class AvailableVersionResponseDto {
+  @IsBoolean()
+  available!: boolean;
+
+  @IsOptional()
+  availableVersion?: SystemConfigImmichVersion;
+}
